[metadata]
name = option_pricing
description = Variance Reduction Techniques of Monte Carlo Simulations for Option Pricing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marvinsohn/option_pricing
author = Marvin Sohn
author_email = marvin.sohn@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/marvinsohn/option_pricing
    Documentation = https://github.com/marvinsohn/option_pricing
    Github = https://github.com/marvinsohn/option_pricing
    Tracker = https://github.com/marvinsohn/option_pricing/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/option_pricing/_version.py
